--- a/package.json
+++ b/package.json
@@ -70,6 +70,11 @@
       "plugin:react-hooks/recommended"
     ]
   },
+  "jest": {
+    "transformIgnorePatterns": [
+      "/node_modules/(?!mui-rte)/"
+    ]
+  },
   "browserslist": {
     "production": [
       ">0.2%",
